--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                   <figure class="cc-effect"><img src="images/project-2.jpg" alt="Image"/>
                     <figcaption>
                       <div class="h4">News Project</div>
-                      <p>Wordpress</p>
+                      <p>Wordpress Development</p>
                     </figcaption>
                   </figure></a></div>
             </div>
