--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#skill">Kemampuan</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#portfolio">Portfolio</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Pengalaman</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="https://harisad.github.io/backbone/">Backbone</a></li>
               </ul>
             </div>
           </div>
